fix multiple spell mistakes and alignments

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 @media screen and (min-width: 1400px) {
   .head11 {
-    margin-top: -230px;
+    margin-top: -270px;
   }
   .con_1 {
     margin-top: -50%;   
